# OpAI-Bench

./: .gitignore  CHECKPOINTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  eval.py  pyproject.toml
baseline/: __init__.py
baseline/damasha/: README.md
baseline/genai-detect-sentence/: .gitignore  models.py
baseline/gl-clic/: README.md
baseline/glimpse/: __init__.py
baseline/mgt-localization/: gradio_MGTL_roberta.py
baseline/radar/: README.md  __init__.py  radar.py  requirements.txt
baseline/roft-boundary/: evaluate_boundary.py  inference.py  perplexity_fixed.py  visualize_nll.py
baseline/sendetex/: AutoFill_Refine.py  README.md  SenDetEX.py
baseline/seqxgpt/: extract_features.py
conf/: config.yaml
conf/dataset/: local_csv.yaml  opai_bench.yaml
conf/detector/: adaloc.yaml  binoculars.yaml  damasha.yaml  desklib.yaml  detectllm.yaml  dna-detectllm.yaml  e5-small.yaml  fast-detectgpt.yaml  genai-sentence.yaml  gigacheck.yaml  gl-clic.yaml  mgtd.yaml  radar.yaml  roberta-openai.yaml  roft-boundary.yaml  sendetex.yaml  seqxgpt-finetuned.yaml  seqxgpt.yaml
construction/: build_opaibench.py  requirements.txt
opai_bench_detectors/: __init__.py  core.py
opai_bench_detectors/configs/: __init__.py  adaloc.yaml  binoculars.yaml  claude.yaml  damasha.yaml  desklib.yaml  detectllm.yaml  dna-detectllm.yaml  e5-small.yaml  fast-detectgpt.yaml  gemini.yaml  genai-sentence.yaml  gigacheck.yaml  gl-clic.yaml  glimpse.yaml  mgtd.yaml  ood-llm-detect.yaml  openai-judge.yaml  radar.yaml  roberta-openai.yaml  roft-boundary.yaml  sendetex.yaml  (+2 more)
scripts/: smoke_all.sh
training/: train_adaloc.py  train_damasha_lora.py  train_genai_sentence.py  train_gigacheck_lora.py  train_sendetex.py  train_seqxgpt_classifier.py
(+41 files in other folders)
